[tool.poetry]
name = "superagent"
version = "0.0.1"
description = ""
authors = ["Ismail Pelaseyed"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.1"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
gunicorn = "^20.1.0"
langchain = "^0.0.161"
openai = "^0.27.6"
requests = "2.29.0"
python-dotenv = "^1.0.0"
python-decouple = "^3.8"
pydantic = "^1.10.7"
sse-starlette = "^1.5.0"
unstructured = "^0.6.4"
prisma = "^0.8.2"
bcrypt = "^4.0.1"
pyjwt = "^2.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
