[package]
name = "vibekit-proxy"
version = "0.0.2-rc.6"
description = "The runtime firewall for AI, blocks LLM vulnerabilities in real time."
authors = ["VibeKit Team"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "vibekit-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.0"
lazy_static = "1.4"
bytes = "1.0"
http = "0.2"
url = "2.0"
async-trait = "0.1"
ctrlc = "3.0"
tokio-stream = { version = "0.1", features = ["sync"] }
libc = "0.2"
dirs = "5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true