[project]
name = "safety-agent"
version = "0.1.2"
description = "A lightweight Python guardrail SDK for content safety"
readme = "README.md"
license = "MIT"
authors = [{ name = "Superagent AI" }]
requires-python = ">=3.10"
keywords = ["guardrail", "safety", "llm", "ai", "content-moderation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pypdf>=5.0.0",
    "daytona-sdk>=0.129.0",
]

[project.urls]
Homepage = "https://superagent.sh"
Documentation = "https://docs.superagent.sh"
Repository = "https://github.com/superagent-ai/superagent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/safety_agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
